fix: spectrogram collapsing into zero width element
Fixes: #90
Fixes: #78

--- a/src/components/annotate/css/style.css
+++ b/src/components/annotate/css/style.css
@@ -2,8 +2,7 @@
 
 :host {
   position: relative;
-  display: inline-block;
-  width: 100%;
+  display: block;
 
   --oe-annotation-color: green;
   --oe-annotation-font-color: white;
