--- a/src/components/indicator/css/style.css
+++ b/src/components/indicator/css/style.css
@@ -1,15 +1,6 @@
 :host {
   position: relative;
-  display: inline-block;
-
-  /*
-    By setting the width to 100%, the indicator component will take up the full
-    width of the parent container.
-    However, this causes problems when the parent container changes size
-    e.g. when expanding the information card in the spectrogram grid
-    TODO: fix this bug
-  */
-  width: 100%;
+  display: block;
 
   &::part(indicator-line) {
     stroke: red;
